# OpenImageDebugger

./: common.cmake
resources/oidscripts/: events.py  oidwindow.py  sysinfo.py
resources/oidscripts/debuggers/: gdbbridge.py  lldbbridge.py
src/: CMakeLists.txt  oid_window.cpp
src/debuggerinterface/: preprocessor_directives.h
src/ipc/: buffer_block.cpp  buffer_block.h  message_block.cpp  message_block.h  message_composer.cpp  message_composer.h  message_decoder.cpp  message_decoder.h  message_type.h  primitive_block.h  string_block.cpp  string_block.h
src/logger/: logger.cpp  logger.h
src/oidbridge/: oid_bridge.cpp  oid_bridge.h  oidbridge.cmake
src/ui/: symbol_search_input.cpp
src/ui/main_window/: auto_contrast.cpp  initialization.cpp  main_window.cpp  main_window.h  main_window.ui  message_processing.cpp  ui_events.cpp
src/visualization/: stage.cpp  stage.h
src/visualization/components/: buffer.h
